MemoryMutationQueue.java: use ArrayDeque instead of ArrayList for more efficient erasing of first element